SUBDIRS = 

EXTRA_DIST = DumpPacketHandler.hpp \
	Exception.hpp \
	InputPacket.hpp \
	InputStream.hpp \
	OutputPacket.hpp \
	OutputStream.hpp \
	IOStream.hpp \
	Packet.hpp \
	PacketFactory.hpp \
	SiRFDevice.hpp \
	UnknownPacket.hpp \
	WarnPacketHandler.hpp \
	PrintPacketHandler.hpp \
	NullPacketHandler.hpp \
	sirf_lowlevel.h \
	Types.hpp \
	Stream.hpp \
	PacketHandler.hpp \
	PacketExtractor.hpp \
	PacketExtractorBase.hpp \
	Message.hpp \
	Debug.hpp \
	Signal.hpp \
	PrintAllHandler.hpp
