# Copyright (c) 2009 Hermann Kraus
# This software is available under a "MIT Style" license
# (see COPYING).


project(SRTM2WAYINFO)
cmake_minimum_required (VERSION 2.6)
SET(WANT_DEBUG 1)
SET(CMAKE_VERBOSE_MAKEFILE OFF)

SET(SRTM2WAYINFO_SOURCES
    main.cpp
    osm-parse.cpp
    relations.cpp
    srtm.cpp
    zip.cpp
    settings.cpp
    osmtypes.cpp
)

SET(EXE_NAME "srtm2wayinfo")
SET(VERSION 0.9)

#################################################################################

SET(CMAKE_COLOR_MAKEFILE ON)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
MESSAGE(STATUS "SRTM2Wayinfo ${VERSION} will be built to install into ${CMAKE_INSTALL_PREFIX}")

IF(WANT_DEBUG)
  SET(CMAKE_BUILD_TYPE Debug)
ENDIF(WANT_DEBUG)
IF (WANT_RELEASEWITHDEBUG)
  SET(CMAKE_BUILD_TYPE RelWithDebInfo)
ENDIF (WANT_RELEASEWITHDEBUG)
IF(NOT WANT_DEBUG AND NOT WANT_RELEASEWITHDEBUG)
  SET(CMAKE_BUILD_TYPE RELEASE)
ENDIF(NOT WANT_DEBUG AND NOT WANT_RELEASEWITHDEBUG)

# Dependencies
SET (QT_MT_REQUIRED TRUE)
SET (QT_MIN_VERSION "4.0.0")
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE( ${QT_USE_FILE} )
IF (QT_FOUND)
    ADD_DEFINITIONS(
    ${QT_DEFINITIONS}
    -DQT_CORE_LIB
    -DQT_GUI_LIB
    -DQT_THREAD_LIB
    -DQT_XML_LIB
  )
ELSE(QT_FOUND)
  MESSAGE(FATAL_ERROR "No Qt4 found")
ENDIF(QT_FOUND)

FIND_PACKAGE(ZLIB REQUIRED)
if (NOT ZLIB_FOUND)
    MESSAGE(FATAL_ERROR "zlib not found")
ENDIF()

FIND_PACKAGE(CURL REQUIRED)
if (NOT CURL_FOUND)
    MESSAGE(FATAL_ERROR "libcurl not found")
ENDIF()

FIND_PACKAGE(ZZIPLIB REQUIRED)
if (NOT ZZIPLIB_FOUND)
    MESSAGE(FATAL_ERROR "zziplib not found")
ENDIF()

include_directories(
    ${CMAKE_SOURCE_DIR}
    ${QT_INCLUDES}
    ${CURL_INCLUDE_DIR}
    ${ZLIB_INCLUDE_DIR}
    ${ZZIPLIB_INCLUDE_DIR}
)


ADD_EXECUTABLE(${EXE_NAME}
 ${SRTM2WAYINFO_SOURCES}
)

TARGET_LINK_LIBRARIES(${EXE_NAME}
    ${QT_LIBRARIES}
    ${CURL_LIBRARIES}
    ${ZLIB_LIBRARIES}
    ${ZZIPLIB_LIBRARIES}
)