SUBDIRS =

include $(top_srcdir)/Makefile.rules

lib_LTLIBRARIES = libPacketInput.la

BUILT_SOURCES = InitialiseDataSource.cpp \
	$(top_srcdir)/include/Packets/Input/InitialiseDataSource.hpp

libPacketInput_la_SOURCES = InitialiseDataSource.cpp \
	$(top_srcdir)/include/Packets/Input/InitialiseDataSource.hpp
