SUBDIRS = 

include $(top_srcdir)/Makefile.rules

lib_LTLIBRARIES = libPacketOutput.la

BUILT_SOURCES = AlmanacData.cpp \
	CPUThroughput.cpp \
	ClockStatus.cpp \
	CommandAcknowledgement.cpp \
	CommandNAcknowledgement.cpp \
	DifferentialData.cpp \
	InitialisationData.cpp \
	MeasuredNavigationDataOut.cpp \
	MeasuredTrackerDataOut.cpp \
	MeasurementData.cpp \
	NavLibMeasurementData.cpp \
	NavigationParameters.cpp \
	OkToSend.cpp \
	SatelliteStateData.cpp \
	SubframeData.cpp \
	TestMode1.cpp \
	TestMode2.cpp \
	TrackerSatelliteData.cpp \
	$(top_srcdir)/include/Packets/Output/AlmanacData.hpp \
	$(top_srcdir)/include/Packets/Output/CPUThroughput.hpp \
	$(top_srcdir)/include/Packets/Output/ClockStatus.hpp \
	$(top_srcdir)/include/Packets/Output/CommandAcknowledgement.hpp \
	$(top_srcdir)/include/Packets/Output/CommandNAcknowledgement.hpp \
	$(top_srcdir)/include/Packets/Output/DifferentialData.hpp \
	$(top_srcdir)/include/Packets/Output/InitialisationData.hpp \
	$(top_srcdir)/include/Packets/Output/MeasuredNavigationDataOut.hpp \
	$(top_srcdir)/include/Packets/Output/MeasuredTrackerDataOut.hpp \
	$(top_srcdir)/include/Packets/Output/MeasurementData.hpp \
	$(top_srcdir)/include/Packets/Output/NavLibMeasurementData.hpp \
	$(top_srcdir)/include/Packets/Output/NavigationParameters.hpp \
	$(top_srcdir)/include/Packets/Output/OkToSend.hpp \
	$(top_srcdir)/include/Packets/Output/SatelliteStateData.hpp \
	$(top_srcdir)/include/Packets/Output/SubframeData.hpp \
	$(top_srcdir)/include/Packets/Output/TestMode1.hpp \
	$(top_srcdir)/include/Packets/Output/TestMode2.hpp \
	$(top_srcdir)/include/Packets/Output/TrackerSatelliteData.hpp

EXTRA_DIST = $(top_srcdir)/include/Packets/Output/SoftwareVersion.hpp \
	$(top_srcdir)/include/Packets/Output/VisibleList.hpp

libPacketOutput_la_SOURCES = SoftwareVersion.cpp VisibleList.cpp \
	AlmanacData.cpp \
	CPUThroughput.cpp \
	ClockStatus.cpp \
	CommandAcknowledgement.cpp \
	CommandNAcknowledgement.cpp \
	DifferentialData.cpp \
	InitialisationData.cpp \
	MeasuredNavigationDataOut.cpp \
	MeasuredTrackerDataOut.cpp \
	MeasurementData.cpp \
	NavLibMeasurementData.cpp \
	NavigationParameters.cpp \
	OkToSend.cpp \
	SatelliteStateData.cpp \
	SubframeData.cpp \
	TestMode1.cpp \
	TestMode2.cpp \
	TrackerSatelliteData.cpp \
	$(top_srcdir)/include/Packets/Output/AlmanacData.hpp \
	$(top_srcdir)/include/Packets/Output/CPUThroughput.hpp \
	$(top_srcdir)/include/Packets/Output/ClockStatus.hpp \
	$(top_srcdir)/include/Packets/Output/CommandAcknowledgement.hpp \
	$(top_srcdir)/include/Packets/Output/CommandNAcknowledgement.hpp \
	$(top_srcdir)/include/Packets/Output/DifferentialData.hpp \
	$(top_srcdir)/include/Packets/Output/InitialisationData.hpp \
	$(top_srcdir)/include/Packets/Output/MeasuredNavigationDataOut.hpp \
	$(top_srcdir)/include/Packets/Output/MeasuredTrackerDataOut.hpp \
	$(top_srcdir)/include/Packets/Output/MeasurementData.hpp \
	$(top_srcdir)/include/Packets/Output/NavLibMeasurementData.hpp \
	$(top_srcdir)/include/Packets/Output/NavigationParameters.hpp \
	$(top_srcdir)/include/Packets/Output/OkToSend.hpp \
	$(top_srcdir)/include/Packets/Output/SatelliteStateData.hpp \
	$(top_srcdir)/include/Packets/Output/SubframeData.hpp \
	$(top_srcdir)/include/Packets/Output/TestMode1.hpp \
	$(top_srcdir)/include/Packets/Output/TestMode2.hpp \
	$(top_srcdir)/include/Packets/Output/TrackerSatelliteData.hpp
